--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -135,7 +135,7 @@ tablas que tendremos que crear son las siguientes:
 \end{figure}
 \subsubsection{Diseño de interfaces}
 Para realizar el diseño de las páginas que crearemos, primero hemos realizado unos bocetos a mano, y despues hemos hecho algo más aproximado a lo que desarrollaremos utilizando
-la herramienta \href{https://www.invisionapp.com/home}{InVision}. El diseño que buscaremos usar es el siguiente:\\
+la herramienta \href{https://www.invisionapp.com/home}{\color{red}{InVision}}. El diseño que buscaremos usar es el siguiente:\\
 \begin{figure}[H]
   \centering
   \includegraphics[width=1.0\textwidth]{LMSI/PaginaDiseño.png}
@@ -761,7 +761,6 @@ About hardware and software for this material, the server will be running with a
     \item Create hardware and software budget.
     \item Write documentation.
   \end{enumerate}
-
 \end{itemize}
 \subsection{Consideraciones}  
 Este trabajo se ha realizado cumpliendo con los requisitos impuestos para las diferentes asignaturas. Si hubieramos tenido más libertad para tomar algunas decisiones, hubieramos optado por incluir las funcionalidades
